force-app/main/default/objects/Case_Archive__b/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Salesforce ID of the parent Account. Leading index field — all queries must filter on this field first to be valid Big Object queries.</description>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>