force-app/main/default/objects/Case_Archive__b/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>Salesforce ID of the original Case record. Part of the composite index (position 3). Enables direct lookup of the archived source record.</description>
    <label>Case Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>