force-app/main/default/objects/Case_Archive__b/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>DateTime the original Case was closed. Index position 2 — queries can filter on this after Account_Id__c. Sorted DESC so most recent closed cases appear first.</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>