force-app/main/default/objects/Case_Archive__b/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <description>Salesforce ID of the Case owner at time of closure. Stored as Text — Big Objects do not support Lookup field types to User.</description>
    <label>Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>