force-app/main/default/objects/Case_Archive__b/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Original Case Priority at time of archival (Low, Medium, High, Critical).</description>
    <label>Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>