force-app/main/default/objects/Case_Archive__b/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Original Case Status at time of archival (e.g. Closed, Resolved).</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>