force-app/main/default/objects/Case_Archive__b/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Original Case Subject. Non-indexed — not usable in WHERE clause of Big Object queries.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>